--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "task-api-manager"
+name = "task-api-managaer"
 version = "0.0.1"
 description = "Test-Description"
 authors = [
@@ -12,7 +12,9 @@ dependencies = [
     "sqlalchemy (>=2.0.45,<3.0.0)",
     "alembic (>=1.17.2,<2.0.0)",
     "pydantic-settings (>=2.12.0,<3.0.0)",
-    "psycopg[binary] (>=3.3.2,<4.0.0)"
+    "psycopg[binary] (>=3.3.2,<4.0.0)",
+    "pika (>=1.3.2,<2.0.0)",
+    "uvicorn (>=0.40.0,<0.41.0)"
 ]
 
 
@@ -22,5 +24,9 @@ build-backend = "poetry.core.masonry.api"
 
 [dependency-groups]
 dev = [
-    "pytest (>=9.0.2,<10.0.0)"
+    "pytest (>=9.0.2,<10.0.0)",
+    "python-dotenv (>=1.0.1,<2.0.0)"
 ]
+
+[tool.pytest.ini_options]
+pythonpath = ["."]
